2009-04-08  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/skipto/totem-skipto.c: Missing file from previous commit.

2009-04-08  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/totem-plugin-manager.c:
	* src/totem-fullscreen.c:
	* src/totem-menu.c:
	* src/totem-object.c:
	* src/totem-playlist.c:
	* src/totem-preferences.c:
	* src/totem-statusbar.c:
	* src/totem-time-label.c:
	* src/totem-video-list.c: Patch from Shixin Zeng
	<zeng.shixin@gmail.com> to add G_MODULE_EXPORT to signal handlers
	and *_get_type functions. (Helps: #342926)

2009-04-05  Philip Withnall  <philip@tecnocode.co.uk>

	* docs/reference/Makefile.am: Only run the gtk-doc test suite if
	we're compiling with gtk-doc support enabled. (Closes: #577774)

2009-04-01  Philip Withnall <philip@tecnocode.co.uk>

	Update svn:ignore properties.

2009-04-05  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/totem-youtube.c (set_up_tree_view),
	(increment_progress_bar_fraction), (resolve_t_param_cb),
	(thumbnail_loaded_cb), (query_finished_cb), (execute_query),
	(cancel_button_clicked_cb), (notebook_switch_page_cb):
	* src/plugins/youtube/youtube.ui: Added support for cancelling queries
	to the YouTube plugin and tidied up the UI a little.

2009-04-05  Philip Withnall  <philip@tecnocode.co.uk>

	* src/totem-video-list.c (query_tooltip_cb), (show_popup_menu),
	(add_to_playlist_action_callback), (copy_location_action_callback):
	Fixed TotemVideoList to change the sensitivity of its context menu
	entries according to the data available for the current row.

2009-04-04  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* src/backend/bacon-video-widget-gst-0.10.c:
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_get_current_frame):
	* src/backend/bacon-video-widget.h:
	* src/plugins/youtube/totem-youtube.c (starting_video_cb):
	Changed from run-time to compile-time detection of GStreamer elements
	required by the YouTube plugin (i.e. souphttpsrc).
