@@ -1,3 +1,7 @@
+2009-04-08  Christian Persch  <chpe@gnome.org>
+
+	* src/eggsmclient-xsmp.c: (save_state): Re-sync from libegg master.
+
 2009-04-08  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/plugins/skipto/totem-skipto.c: Missing file from previous commit.
